--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,17 @@
+
 {
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+ "hosting": {
+   "public": "dist/alertas-urbanas-front/browser",
+   "ignore": [
+     "firebase.json",
+     "**/.*",
+     "**/node_modules/**"
+   ],
+   "rewrites": [
+     {
+       "source": "**",
+       "destination": "/index.html"
+     }
+   ]
+ }
 }
