--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alertas-urbanas-front",
+  "name": "alertas-comunitarias-front",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
